syntax = "proto3";

package com.road.yishi.proto.army;

message RuneHoleInfoMsg {
  int32 id = 1;
  int32 holeId = 2;
  int32 exp = 3;
  int32 grade = 4;
  int32 skill = 5;
  string pos = 6;
  int32 tempSkillId = 7;
}
