syntax = "proto3";

package com.road.yishi.proto.chat;

message ChatChannelMsg {
  int32 channel = 1;
  int32 type = 2;
  string encodeMsg = 3;
  int32 otherId = 4;
  string name = 5;
  repeated int32 team = 6;
  int32 consortiaId = 7;
  string consortiaName = 8;
  int32 userType = 9;
  int32 limitGrade = 10;
  int32 maxGrade = 11;
  bool isCenterTip = 12;
  bool isBigTip = 13;
  int32 vipGrade = 14;
  repeated int32 expUserIds = 15;
  int32 bigBugleType = 16;
  repeated int32 items = 17;
  repeated int32 stars = 18;
  repeated int32 powcards = 19;
  string serverName = 20;
  string battleId = 21;
  bool isImportant = 22;
  int32 appellid = 23;
  int32 job = 24;
  string receiveName = 25;
  int32 headid = 26;
  int32 level = 27;
  string curTime = 28;
  int32 frameId = 29;
  int32 fight = 30;
  string mainSite = 31;
}
